--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
     <header>
         <!-- Profile picture inside header, left-aligned near name -->
-        <img src="/storage/emulated/0/DCIM/Screenshots/Screenshot_20250321_080953.jpg" alt="priya v" class="profile-picture">
+        <img src="Screenshot_20250321_080953.jpg" alt="priya v" class="profile-picture">
         <div class="header-content">
             <h1>priya v</h1>
             <p>BCA computer application</p>
@@ -156,7 +156,7 @@
         <div class="section-content" style="text-align: center;">
             <h2>Resume</h2>
             <!-- Corrected Resume Download Button -->
-            <a href="https://drive.google.com/file/d/1hnBYR0BwccSIuP7JRmpdqK1cSQ6uRT4o/view?usp=drivesdk" class="download-button">Download CV</a>
+            <a href="resume.pdf.pdf" class="download-button">Download CV</a>
         </div>
     </section>
 
